Jump Start Changelog
====================

2.1.5 - 03/10/2017
------------------

* **Updated Theme Blvd framework to 2.6.4**
* Improvement: Floating search will now close on focusing out of search input box.
* Improvement: Increased likelihood of unique ID's for various HTML elements being unique, when they need to be.
* Improvement: Google Maps API key must be set for all websites in order to use the Google Maps element of the layout builder.
* Fixed: Google Maps API console JavaScript error in layout builder in some cases, when no Google Maps API key is set.
* Fixed: In some cases, 0% opacity not working for transparent header on Agent base.
* Fixed: In some cases, the framework's pre_get_posts filter was overriding WooCommerce from setting the correct products per page utilizing the loop_shop_per_page filter.
* Fixed: Error when translating a page with [WPML](http://themeblvd.com/links/wpml) and the Layout Builder.
* Fixed: Updated description of Video Link option in Post Options and Page Options meta boxes to state only Vimeo and YouTube are supported.
* Fixed: Gallery slider thumbnail and dots navigation not working when using variable width Owl Carousel.
* Fixed: Parallax backgrounds no longer display on mobile devices with large viewports (landscape oriented iPad for example); this was resulting in janky scrolling behavior and was never intended to be supported on true mobile devices.
* Removed: Admin-side global `$content_width` hack, originally implemented to help manage videos in WP editor. No longer needed and was causing other conflicts with inserting images.
* Updated: Owl Carousel to 2.2.1.
* Updated: FontAwesome to 4.7.

--------------------------------------------------------------

2.1.4 - 01/16/2017
------------------

* **Updated Theme Blvd framework to 2.6.3**
* Improvement: Much better support translating pages with custom layouts in WPML.
* Improvement: Enqueue child theme *style.css* with child theme version, and not parent theme version.